hphp/hack/test/typecheck/as_expression/callable.php.exp
File "callable.php", line 6, characters 9-28:
Callable typehints cannot be used with as-expressions (Parsing[1002])
File "callable.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
  File "callable.php", line 3, characters 12-14:
  This is an int
  File "callable.php", line 6, characters 9-29:
  It is incompatible with a function
File "callable.php", line 6, characters 9-29:
Invalid "as" expression hint (Typing[4195])
  File "callable.php", line 6, characters 9-29:
  The "as" operator cannot be used with a function type
